// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppCounter > renders properly 1`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders properly 2`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders properly 3`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders properly 4`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders properly 5`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders properly 6`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in green when the count value is less or equal than 5 1`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">0</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in green when the count value is less or equal than 5 2`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">1</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in green when the count value is less or equal than 5 3`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">2</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in green when the count value is less or equal than 5 4`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">3</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in green when the count value is less or equal than 5 5`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">4</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in green when the count value is less or equal than 5 6`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-green-500">5</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in red when the count value is greater than 5 1`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-red-500">6</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in red when the count value is greater than 5 2`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-red-500">7</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in red when the count value is greater than 5 3`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-red-500">8</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in red when the count value is greater than 5 4`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-red-500">9</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;

exports[`AppCounter > renders the text in red when the count value is greater than 5 5`] = `
"<button data-v-84e281ac="" class="button-decrement">-</button>
<span data-v-84e281ac="" class="count-value text-red-500">10</span>
<button data-v-84e281ac="" class="button-increment">+</button>"
`;
